<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FramentsExample</string>
    <string name="action_settings">Settings</string>
    <string name="splash">Splash!</string>
    <string name="change_color">Alterar</string>
    <string name="repet_change_color">Repetir</string>
    <string name="scheduled_change_color">Programar</string>
    <string name="title_activity_splash">Splash</string>
    <string name="enviar">Enviar</string>
    <string name="enviarAsync">Enviar Async.</string>
    <string name="enviarBroadcast">Enviar Broad.</string>
    <string name="title_activity_service">Service</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="status">Status</string>
    <string name="title_activity_menu">Menu</string>
    <string name="not_yet">Not yet!</string>
    

</resources>